# bytecode2tileir

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  a.py  commands.md  flash_attention.mlir  flash_attention.tileirbc  generate_partition_tests.py  plan.md  test_stride_debug.py  test_stride_debug2.py  tests.md
.codebuddy/commands/: plan.md
llm_docs/libs/: iterate.md  ndarray.md
llm_docs/ndarray/: reshape.md
llm_docs/rust/: bits.md  float16.md  instruct.md  precision.md  project.md  quality.md  test_review.md  tests.md  unittest.md
llm_docs/tileir/: all_ops.md  examples.md  general.md  memory.md  ops_titles.md  tileir_index.md  types.md
llm_docs/tileir/chapters/: atomics.html  bitwise.md  conversions.md  core.md  ctrl-flow.md  float.md  integer.md  memory.md  misc.html  (+2 more)
src/: decode.rs  error.rs  lib.rs  main.rs
src/bytecode/: attrs.rs  consts.rs  debug.rs  decode_body.rs  error.rs  file.rs  format.rs  funcs.rs  globals.rs  mod.rs  module.rs  reader.rs  strings.rs  table.rs  tags.rs  tests.rs  types.rs
src/cuda_tile_ir/: arena.rs  attr_keys.rs  attrs.rs  builder.rs  cfg.rs  consts.rs  debug.rs  enums.rs  ids.rs  ir.rs  mod.rs  opcodes.rs  types.rs  value.rs
src/interpreter/: args.rs  bitwise.rs  conversions.rs  core.rs  ctrl_flow.rs  entry.rs  execute.rs  float.rs  integer.rs  memory.rs  misc.rs  mod.rs  tokens.rs  type_conversion.rs  views.rs
test_samples/: attention.mlir  attention.tileirbc  attention_in_params.md  matmul.mlir  matmul.tileirbc  mm.mlir  mm.tileirbc  rope.mlir  rope.tileirbc
tileir_docs/: load_store.md  operations.md  semantics.md
(+41 files in other folders)
