[package]
name = "bytecode2mlir"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
half = { version = "2.4", features = ["num-traits"] }
smallvec = "1.13"
bitflags = "2.9"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
ndarray = "0.17.2"
itertools = "0.14.0"
rand = { version = "0.10", features = ["thread_rng"] }


[[bin]]
name = "bytecode2mlir"
path = "src/bin/bytecode2mlir.rs"
